Bug 147722 - ScrolledWindow expands beyond buttonbox
Summary: ScrolledWindow expands beyond buttonbox
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.4.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sorting
  Show dependency treegraph
 
Reported: 2022-03-02 09:18 UTC by Heiko Tietze
Modified: 2022-03-08 19:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot with gen (37.15 KB, image/png)
2022-03-02 09:18 UTC, Heiko Tietze
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2022-03-02 09:18:58 UTC
Created attachment 178610 [details]
Screenshot with gen

Adding sortkeys in the sort dialog makes the window scroll at a certain point. Works nicely with gtk3 but fails for kf5 and gen by expanding beyond the scrolled window- and overlapping the confirmatory buttons. No problem with 7.3 but master. Last patch was for bug 140290 but likely not causing this issue.
Comment 1 Michael Weghorn 2022-03-02 14:21:38 UTC
Bibisected to

commit 2b58a0979f9206cfca6d78cb2f3d5e65cd735f8b
Author: Tor Lillqvist <tml@collabora.com>
Date:   Tue Jan 25 16:57:09 2022 +0200

    Add sanity check to avoid potential crash in the Collabora Online server
    
    Make sure some coordinates don't become huge negative numbers. This
    doesn't fix the unknown root cause of course.
    
    There already was such a sanity check here in this branch, but for
    Android only. I now made it cross-platform.
    
    Let's use the same Change-Id as in the corresponding commit in the
    co-2021 branch.
    
    Change-Id: I28e343271b3f80ac203b52db1be58d2add89eecd


The code previously added with condition '#if HAVE_FEATURE_ANDROID_LOK' was added in

commit 50b640a298604ecd10ce095a005cd8eaaf82fc14
Author: merttumer <mert.tumer@collabora.com>
Date:   Fri May 7 10:19:05 2021 +0000

    android: Fix DrawingArea inside CsvTableBox is shrinked
    
    Change-Id: Ia722297051eb3413b9db17024173c9eb596d8e7a
    Signed-off-by: merttumer <mert.tumer@collabora.com>
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115235
    Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/115276
    Tested-by: Jenkins

Adding CC: to Tor Lillqvist


Potentially, one way to fix this (without looking at any underlying issue) might be to make this conditional on 'comphelper::LibreOfficeKit::isActive()' instead so it applies for COOL as well, but not the desktop version, but maybe Tor or Mert can say more...
Comment 2 Caolán McNamara 2022-03-07 12:33:48 UTC
I can help here for this specific case
Comment 3 Commit Notification 2022-03-08 19:57:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6bdabb9e14231b46b888810856a3bd3b11ff5128

Resolves: tdf#147722 ScrolledWindow expands beyond buttonbox

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.