Resolves: tdf#147722 ScrolledWindow expands beyond buttonbox

Change-Id: Iaf65bf681739c7fc2c7cb14851621442a861c234
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/131108
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 6bdabb9e14231b46b888810856a3bd3b11ff5128)